Setup html elements for Employee Training Sessions page

--- a/views/employees_cert.hbs
+++ b/views/employees_cert.hbs
@@ -17,7 +17,7 @@
   <a href="employees">Employees</a>
   <a href="training_sessions">Training Sessions</a>
   <a href="employees_cert">Employee Certifications</a>
-  <a href="employees_train">Employee Trainings</a>
+  <a href="employees_train">Employee Training Sessions</a>
 </nav>
 <main>
     <div id="browse">
@@ -51,23 +51,36 @@
         </table>
     </div>
      <div id="insert" class="form-container">
-        <form>
+        <form id="newEmployeeCertForm">
             <legend>Add New Employee Certification</legend>
-            <label>Employee: <input type="number" name="employeeID"></label>        
+            <div>
+                <label>Employee:
+                    <select id="newEmployeeCertEmployeeID">
+                        <option value=1>Vladimir Collier</option>
+                        <option value=2>Donna	Lott</option>
+                        <option value=3>Athena	Fry</option>
+                        <option value=4>Igor	Parks</option>
+                        <option value=5>Sybill	Robles</option>
+                        <option value=6>Lucian	Jordan</option>
+                        <option value=7>Sharon	Murray</option>
+                        <option value=8>Maisie	Herman</option>
+                    </select>
+                </label>
+            </div>        
             <div>
                 <label>Certification: 
-                    <select id="newEmployeeTrainingCert">
-                        <option value="Safety 101">Safety 101</option>
-                        <option value="Drawing Reading 101">Drawing Reading 101</option>
-                        <option value="Drawing Reading 102">Drawing Reading 102</option>
-                        <option value="Drawing Reading 103">Drawing Reading 103</option>
-                        <option value="Ethics Compliance">Ethics Compliance</option>
-                        <option value="Cyber Security 101">Cyber Security 101</option>
-                        <option value="Cyber Security 102">Cyber Security 102</option>
-                        <option value="Torque Cert">Torque Cert</option>
-                        <option value="Sealing Cert">Sealing Cert</option>
-                        <option value="Crane Cert">Crane Cert</option>
-                </select>
+                    <select id="newEmployeeCertCertID">
+                        <option value=1>Safety 101</option>
+                        <option value=2>Drawing Reading 101</option>
+                        <option value=3>Drawing Reading 102</option>
+                        <option value=4>Drawing Reading 103</option>
+                        <option value=5>Ethics Compliance</option>
+                        <option value=6>Cyber Security 101</option>
+                        <option value=7>Cyber Security 102</option>
+                        <option value=8>Torque Cert</option>
+                        <option value=9>Sealing Cert</option>
+                        <option value=10>Crane Cert</option>
+                    </select>
                 </label>
             </div>
             <label>Date Obtained: <input type="date" name="dateObtained"></label>
@@ -78,7 +91,7 @@
     </div>
 
     <div id="update" class="form-container">
-        <form>
+        <form id="updateEmployeeCertForm">
             <legend>Update Employee Certification</legend>
             <input type="hidden" id="updateEmployeeCertID" name="id">
             <div>
@@ -119,7 +132,7 @@
     </div> 
 
     <div id="delete" class="form-container">
-        <form id="deleteCertForm">
+        <form id="deleteEmployeeCertForm">
             <legend>Delete Employee Certification</legend>
             <p>Are you sure you want to delete this employee certification?</p>
             <p>Employee ID: <input id="deleteEmployeeCertEmployeeID" disabled /></p>
