--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,17 +12,17 @@
     needed.</p>
   <p><a href="/certifications">Certifications</a> | 
     Manage certifications available to employees. Add new certifications,
-    update existing ones, and handle certification details.</>
+    update existing ones, and handle certification details.
   <p><a href="/employees">Employees</a> | 
     Access and update employee records, add new employees, or edit information
     related to existing employees.</p>
   <p><a href="/training_sessions">Training Sessions</a> | 
     Schedule, update, and manage training sessions. Link sessions to
-    certifications and manage dates and locations.</>
+    certifications and manage dates and locations.
   <p><a href="/employees_cert">Employee Certifications</a> | 
     Assign, update, and manage certifications for each employee. Keep track of
     certification expiry and renewals.</p>
-  <p><a href="/employees_train">Employee Trainings</a> | 
+  <p><a href="/employees_train">Employee Training Sessions</a> | 
     Assign, update, and manage employee training sessions for each employee.</p>
 </nav>
 <main>
