--- a/views/departments.hbs
+++ b/views/departments.hbs
@@ -17,7 +17,7 @@
   <a href="employees">Employees</a>
   <a href="training_sessions">Training Sessions</a>
   <a href="employees_cert">Employee Certifications</a>
-  <a href="employees_train">Employee Trainings</a>
+  <a href="employees_train">Employee Training Sessions</a>
 </nav>
 <main>
     <div id="browse">
