--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -84,7 +84,7 @@
     <a href="employees">Employees</a>
     <a href="training_sessions">Training Sessions</a>
     <a href="employee_cert">Employee Certifications</a>
-    <a href="employee_train">Employee Trainings</a>
+    <a href="employee_train">Employee Training Sessions</a>
 </nav>
     <main>
     <div id="browse">
