--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -1,183 +1,178 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Employees</title>
     <style>
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-        th, td {
-            border: 1px solid #dddddd;
-            text-align: left;
-            padding: 8px;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        .form-container {
-            display: none;
-        }
+      table { border-collapse: collapse; width: 100%; } th, td { border: 1px
+      solid #dddddd; text-align: left; padding: 8px; } th { background-color:
+      #f2f2f2; } .form-container { display: none; }
     </style>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script language="JavaScript">
-        function showform(dowhat) {
-            var sections = ['browse', 'insert', 'update', 'delete'];
-            sections.forEach(function(section) {
-                var sectionElement = document.getElementById(section);
-                if (dowhat === 'all' || dowhat === section) {
-                    sectionElement.style.display = 'block'; 
-                } else {
-                    sectionElement.style.display = 'none'; 
-                }
-            });
-        }
-        function newEmployee() { 
-            showform('insert'); 
-        }
-        
-        function updateEmployee(element) {
-            var id = element.getAttribute('data-id');
-            var fname = element.getAttribute('data-fname');
-            var lname = element.getAttribute('data-lname');
-            var email = element.getAttribute('data-email');
-            var deptid = element.getAttribute('data-deptid');
-    
-            document.getElementById('updateEmployeeID').value = id;
-            document.getElementById('updateEmployeeIDSpan').textContent = id;
-            document.getElementById('updateEmployeeFName').value = fname;
-            document.getElementById('updateEmployeeLName').value = lname;
-            document.getElementById('updateEmployeeEmail').value = email;
-            document.getElementById('updateEmployeeDeptID').value = deptid;
-    
-            showform('update');
-        }
-        function deleteEmployee(element) {
-            var id = element.getAttribute('data-id');
-            var name = element.getAttribute('data-name');
-    
-            document.getElementById('deleteEmployeeID').value = id;
-            document.getElementById('deleteEmployeeIDSpan').textContent = id;
-            document.getElementById('deleteEmployeeNameSpan').textContent = name;
-    
-            showform('delete');
-        }
-        function browseEmployees() { 
-            showform('browse'); 
-        }
-
-        function showAll() { 
-            showform('all'); 
-        }
+      function showform(dowhat) { var sections = ['browse', 'insert', 'update',
+      'delete']; sections.forEach(function(section) { var sectionElement =
+      document.getElementById(section); if (dowhat === 'all' || dowhat ===
+      section) { sectionElement.style.display = 'block'; } else {
+      sectionElement.style.display = 'none'; } }); } function newEmployee() {
+      showform('insert'); } function updateEmployee(element) { var id =
+      element.getAttribute('data-id'); var fname =
+      element.getAttribute('data-fname'); var lname =
+      element.getAttribute('data-lname'); var email =
+      element.getAttribute('data-email'); var deptid =
+      element.getAttribute('data-deptid');
+      document.getElementById('updateEmployeeID').value = id;
+      document.getElementById('updateEmployeeIDSpan').textContent = id;
+      document.getElementById('updateEmployeeFName').value = fname;
+      document.getElementById('updateEmployeeLName').value = lname;
+      document.getElementById('updateEmployeeEmail').value = email;
+      document.getElementById('updateEmployeeDeptID').value = deptid;
+      showform('update'); } function deleteEmployee(element) { var id =
+      element.getAttribute('data-id'); var name =
+      element.getAttribute('data-name');
+      document.getElementById('deleteEmployeeID').value = id;
+      document.getElementById('deleteEmployeeIDSpan').textContent = id;
+      document.getElementById('deleteEmployeeNameSpan').textContent = name;
+      showform('delete'); } function browseEmployees() { showform('browse'); }
+      function showAll() { showform('all'); }
     </script>
-</head>
-<body onload="browseEmployees()">
+  </head>
+  <body onload="browseEmployees()">
     <header>
-        <h1>Employees</h1>
+      <h1>Employees</h1>
     </header>
     <nav>
-    <a href="/">Home</a>
-    <a href="departments">Departments</a>
-    <a href="certifications">Certifications</a>
-    <a href="employees">Employees</a>
-    <a href="training_sessions">Training Sessions</a>
-    <a href="employee_cert">Employee Certifications</a>
-    <a href="employee_train">Employee Training Sessions</a>
-</nav>
+      <a href="/">Home</a>
+      <a href="departments">Departments</a>
+      <a href="certifications">Certifications</a>
+      <a href="employees">Employees</a>
+      <a href="training_sessions">Training Sessions</a>
+      <a href="employee_cert">Employee Certifications</a>
+      <a href="employee_train">Employee Training Sessions</a>
+    </nav>
     <main>
-    <div id="browse">
+      <div id="browse">
         <button onClick="newEmployee()" class="btn">Add New Employee</button>
         <p><a href="#" onClick="showAll()">Display all forms</a> </p>
-        <table class="employeeTable" >
+        <table class="employeeTable">
+          <tr>
+            <th>Action</th>
+            <th class="employeeID">ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th class="employeeEmail">Email</th>
+            <th>Department</th>
+          </tr>
+          {{#each data}}
             <tr>
-                <th>Action</th>
-                <th class ="employeeID">ID</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th class="employeeEmail" >Email</th>
-                <th>Department</th>
+              <td>
+                <a
+                  href="#"
+                  onClick="updateEmployee(this)"
+                  data-employeeID="{{this.employeeID}}"
+                  data-fname="{{this.fName}}"
+                  data-lname="{{this.lName}}"
+                  data-email="{{this.email}}"
+                  data-deptid="{{this.deptID}}"
+                >Edit</a>
+                |
+                <a
+                  href="#"
+                  onclick="deleteEmployee(this)"
+                  data-employeeID="{{this.employeeID}}"
+                  data-name="{{this.fName}} {{this.lName}}"
+                >Delete</a>
+              </td>
+              <td>{{this.employeeID}}</td>
+              <td>{{this.fName}}</td>
+              <td>{{this.lName}}</td>
+              <td>{{this.email}}</td>
+              <td>{{this.deptID}}</td>
             </tr>
-            {{#each data}}
-            <tr>
-                <td>
-                    <a href="#" onClick="updateEmployee(this)" data-employeeID="{{this.employeeID}}" data-fname="{{this.fName}}" data-lname="{{this.lName}}" data-email="{{this.email}}" data-deptid="{{this.deptID}}">Edit</a> |
-                    <a href="#" onclick="deleteEmployee(this)" data-employeeID="{{this.employeeID}}" data-name="{{this.fName}} {{this.lName}}">Delete</a>
-                </td>
-                <td>{{this.employeeID}}</td>
-                <td>{{this.fName}}</td>
-                <td>{{this.lName}}</td>
-                <td>{{this.email}}</td>
-                <td>{{this.deptID}}</td>
-            </tr>
-            {{/each}}
+          {{/each}}
         </table>
-    </div>
-    <div id="insert" style="display: none;">
-    <form method="POST" id="addEmployee">
-      <legend><strong>Add Employee</strong></legend>
-      <fieldset>
-        <label>First Name: <input type="text" name="fname" /></label>
-        <label>Last Name: <input type="text" name="lname" /></label>
-        <label>Email: <input class="longInput" type="text" name="email" /></label>
-        <label>Department ID: <input type="text" name="deptID" /></label>
-      </fieldset>
-      <input class="btn" type="submit" value="Add Employee" />
-      <input
-        class="btn"
-        type="button"
-        value="Cancel"
-        onClick="browseEmployees()"
-      />
-    </form>
-  </div>
+      </div>
+      <div id="insert" style="display: none;">
+        <form method="POST" id="addEmployee">
+          <legend><strong>Add Employee</strong></legend>
+          <fieldset>
+            <label>First Name: <input type="text" name="fname" /></label>
+            <label>Last Name: <input type="text" name="lname" /></label>
+            <label>Email:
+              <input class="longInput" type="text" name="email" /></label>
+            <label>Department ID: <input type="text" name="deptID" /></label>
+          </fieldset>
+          <input class="btn" type="submit" value="Add Employee" />
+          <input
+            class="btn"
+            type="button"
+            value="Cancel"
+            onClick="browseEmployees()"
+          />
+        </form>
+      </div>
 
-  <div id="update" style="display: none;">
-    <form method="POST" id="updateEmployee">
-      <legend><strong>Update Employee</strong></legend>
-      <fieldset>
-        <input type="hidden" name="employeeID" id="updateEmployeeID" />
-        <label>ID: <span id="updateEmployeeIDSpan"></span></label>
-        <label>First Name:
-          <input type="text" name="fname" id="updateEmployeeFName" /></label>
-        <label>Last Name:
-          <input type="text" name="lname" id="updateEmployeeLName" /></label>
-        <label>Email:
-          <input type="text" name="email" id="updateEmployeeEmail" /></label>
-        <label>Department ID:
-          <input type="text" name="deptID" id="updateEmployeeDeptID" /></label>
-      </fieldset>
-      <input class="btn" type="submit" value="Update Employee" />
-      <input
-        class="btn"
-        type="button"
-        value="Cancel"
-        onClick="browseEmployees()"
-      />
-    </form>
-  </div>
+      <div id="update" style="display: none;">
+        <form method="POST" id="updateEmployee">
+          <legend><strong>Update Employee</strong></legend>
+          <fieldset>
+            <input type="hidden" name="employeeID" id="updateEmployeeID" />
+            <label>ID: <span id="updateEmployeeIDSpan"></span></label>
+            <label>First Name:
+              <input
+                type="text"
+                name="fname"
+                id="updateEmployeeFName"
+              /></label>
+            <label>Last Name:
+              <input
+                type="text"
+                name="lname"
+                id="updateEmployeeLName"
+              /></label>
+            <label>Email:
+              <input
+                type="text"
+                name="email"
+                id="updateEmployeeEmail"
+              /></label>
+            <label>Department ID:
+              <input
+                type="text"
+                name="deptID"
+                id="updateEmployeeDeptID"
+              /></label>
+          </fieldset>
+          <input class="btn" type="submit" value="Update Employee" />
+          <input
+            class="btn"
+            type="button"
+            value="Cancel"
+            onClick="browseEmployees()"
+          />
+        </form>
+      </div>
 
-  <div id="delete" style="display: none;">
-    <form method="POST" id="deleteEmployee">
-      <legend><strong>Delete Employee</strong></legend>
-      <fieldset>
-        <label>ID: <span id="deleteEmployeeIDSpan"></span></label>
-        <label>Name: <span id="deleteEmployeeNameSpan"></span></label>
-        <input type="hidden" name="employeeID" id="deleteEmployeeID" />
-      </fieldset>
-      <input class="btn" type="submit" value="Delete Employee" />
-      <input
-        class="btn"
-        type="button"
-        value="Cancel"
-        onClick="browseEmployees()"
-      />
-    </form>
-  </div>
+      <div id="delete" style="display: none;">
+        <form method="POST" id="deleteEmployee">
+          <legend><strong>Delete Employee</strong></legend>
+          <fieldset>
+            <label>ID: <span id="deleteEmployeeIDSpan"></span></label>
+            <label>Name: <span id="deleteEmployeeNameSpan"></span></label>
+            <input type="hidden" name="employeeID" id="deleteEmployeeID" />
+          </fieldset>
+          <input class="btn" type="submit" value="Delete Employee" />
+          <input
+            class="btn"
+            type="button"
+            value="Cancel"
+            onClick="browseEmployees()"
+          />
+        </form>
+      </div>
     </main>
     <footer>
-        <p>© 2024 ByteBalancers. All rights reserved.</p>
+      <p>© 2024 ByteBalancers. All rights reserved.</p>
     </footer>
-</body>
+  </body>
 </html>
