--- a/views/employees_cert.hbs
+++ b/views/employees_cert.hbs
@@ -1,149 +1,181 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="../css/index.css" />
     <script src="../js/index.js"></script>
     <title>Employee Certifications</title>
-</head>
-<body>
-<header>
-    <h1>Employee Certifications</h1>
-</header>
-<nav>
-  <a href="/">Home</a>
-  <a href="departments">Departments</a>
-  <a href="certifications">Certifications</a>
-  <a href="employees">Employees</a>
-  <a href="training_sessions">Training Sessions</a>
-  <a href="employees_cert">Employee Certifications</a>
-  <a href="employees_train">Employee Training Sessions</a>
-</nav>
-<main>
-    <div id="browse">
-        <button onClick="newEmployeeCert()" class="btn">Add New Employee Certification</button>
+  </head>
+  <body>
+    <header>
+      <h1>Employee Certifications</h1>
+    </header>
+    <nav>
+      <a href="/">Home</a>
+      <a href="departments">Departments</a>
+      <a href="certifications">Certifications</a>
+      <a href="employees">Employees</a>
+      <a href="training_sessions">Training Sessions</a>
+      <a href="employees_cert">Employee Certifications</a>
+      <a href="employees_train">Employee Training Sessions</a>
+    </nav>
+    <main>
+      <div id="browse">
+        <button onClick="newEmployeeCert()" class="btn">Add New Employee
+          Certification</button>
         <table>
-            <thead>
-                <tr>
-                    <th>Action</th>
-                    <th>Employee Certification ID</th>
-                    <th>Employee ID</th>
-                    <th>Certification ID</th>
-                    <th>Date Obtained</th>
-                    <th>Expiration Date</th>
-                </tr>
-            </thead>
-            <tbody>
-                {{#each data}}
-                <tr>
-                    <td>
-                        <a href="#" onClick="updateEmployeeCert(this)" data-id={{this.employeeCertID}} data-employeeID={{this.employeeID}} data-certID={{this.certID}} data-dateObtained={{this.dateObtained}} data-expirationDate={{this.expirationDate}}>Edit</a> |
-                        <a href="#" onClick="deleteEmployeeCert(this)" data-id={{this.employeeCertID}} data-employeeID={{this.employeeID}} data-certID={{this.certID}} data-dateObtained={{this.dateObtained}} data-expirationDate={{this.expirationDate}}>Delete</a>
-                    </td>
-                    <td>{{this.employeeCertID}}</td>
-                    <td>{{this.employeeID}}</td>
-                    <td>{{this.certID}}</td>
-                    <td>{{this.dateObtained}}</td>
-                    <td>{{this.expirationDate}}</td>
-                </tr>
-                {{/each}}
-            </tbody>
+          <thead>
+            <tr>
+              <th>Action</th>
+              <th>Employee Certification ID</th>
+              <th>Employee ID</th>
+              <th>Certification ID</th>
+              <th>Date Obtained</th>
+              <th>Expiration Date</th>
+            </tr>
+          </thead>
+          <tbody>
+            {{#each data}}
+              <tr>
+                <td>
+                  <a
+                    href="#"
+                    onClick="updateEmployeeCert(this)"
+                    data-id={{this.employeeCertID}}
+                    data-employeeID={{this.employeeID}}
+                    data-certID={{this.certID}}
+                    data-dateObtained={{this.dateObtained}}
+                    data-expirationDate={{this.expirationDate}}
+                  >Edit</a>
+                  |
+                  <a
+                    href="#"
+                    onClick="deleteEmployeeCert(this)"
+                    data-id={{this.employeeCertID}}
+                    data-employeeID={{this.employeeID}}
+                    data-certID={{this.certID}}
+                    data-dateObtained={{this.dateObtained}}
+                    data-expirationDate={{this.expirationDate}}
+                  >Delete</a>
+                </td>
+                <td>{{this.employeeCertID}}</td>
+                <td>{{this.employeeID}}</td>
+                <td>{{this.certID}}</td>
+                <td>{{this.dateObtained}}</td>
+                <td>{{this.expirationDate}}</td>
+              </tr>
+            {{/each}}
+          </tbody>
         </table>
-    </div>
-     <div id="insert" class="form-container">
+      </div>
+      <div id="insert" class="form-container">
         <form id="newEmployeeCertForm">
-            <legend>Add New Employee Certification</legend>
-            <div>
-                <label>Employee:
-                    <select id="newEmployeeCertEmployeeID">
-                        <option value=1>Vladimir Collier</option>
-                        <option value=2>Donna	Lott</option>
-                        <option value=3>Athena	Fry</option>
-                        <option value=4>Igor	Parks</option>
-                        <option value=5>Sybill	Robles</option>
-                        <option value=6>Lucian	Jordan</option>
-                        <option value=7>Sharon	Murray</option>
-                        <option value=8>Maisie	Herman</option>
-                    </select>
-                </label>
-            </div>        
-            <div>
-                <label>Certification: 
-                    <select id="newEmployeeCertCertID">
-                        <option value=1>Safety 101</option>
-                        <option value=2>Drawing Reading 101</option>
-                        <option value=3>Drawing Reading 102</option>
-                        <option value=4>Drawing Reading 103</option>
-                        <option value=5>Ethics Compliance</option>
-                        <option value=6>Cyber Security 101</option>
-                        <option value=7>Cyber Security 102</option>
-                        <option value=8>Torque Cert</option>
-                        <option value=9>Sealing Cert</option>
-                        <option value=10>Crane Cert</option>
-                    </select>
-                </label>
-            </div>
-            <label>Date Obtained: <input type="date" name="dateObtained"></label>
-            <label>Expiration Date: <input type="date" name="expirationDate"></label>
-            <button type="submit">Submit</button>
-            <button type="button" onClick="browseMain()">Cancel</button>
+          <legend>Add New Employee Certification</legend>
+          <div>
+            <label>Employee:
+              <select id="newEmployeeCertEmployeeID">
+                <option value="1">Vladimir Collier</option>
+                <option value="2">Donna Lott</option>
+                <option value="3">Athena Fry</option>
+                <option value="4">Igor Parks</option>
+                <option value="5">Sybill Robles</option>
+                <option value="6">Lucian Jordan</option>
+                <option value="7">Sharon Murray</option>
+                <option value="8">Maisie Herman</option>
+              </select>
+            </label>
+          </div>
+          <div>
+            <label>Certification:
+              <select id="newEmployeeCertCertID">
+                <option value="1">Safety 101</option>
+                <option value="2">Drawing Reading 101</option>
+                <option value="3">Drawing Reading 102</option>
+                <option value="4">Drawing Reading 103</option>
+                <option value="5">Ethics Compliance</option>
+                <option value="6">Cyber Security 101</option>
+                <option value="7">Cyber Security 102</option>
+                <option value="8">Torque Cert</option>
+                <option value="9">Sealing Cert</option>
+                <option value="10">Crane Cert</option>
+              </select>
+            </label>
+          </div>
+          <label>Date Obtained:
+            <input type="date" name="dateObtained" /></label>
+          <label>Expiration Date:
+            <input type="date" name="expirationDate" /></label>
+          <button type="submit">Submit</button>
+          <button type="button" onClick="browseMain()">Cancel</button>
         </form>
-    </div>
+      </div>
 
-    <div id="update" class="form-container">
+      <div id="update" class="form-container">
         <form id="updateEmployeeCertForm">
-            <legend>Update Employee Certification</legend>
-            <input type="hidden" id="updateEmployeeCertID" name="id">
-            <div>
-                <label>Employee:
-                    <select id="updateEmployeeCertEmployeeID">
-                        <option value=1>Vladimir Collier</option>
-                        <option value=2>Donna	Lott</option>
-                        <option value=3>Athena	Fry</option>
-                        <option value=4>Igor	Parks</option>
-                        <option value=5>Sybill	Robles</option>
-                        <option value=6>Lucian	Jordan</option>
-                        <option value=7>Sharon	Murray</option>
-                        <option value=8>Maisie	Herman</option>
-                    </select>
-                </label>
-            </div>
-            <div>
-                <label>Certification:
-                    <select id="updateEmployeeCertCertID">
-                        <option value=1>Safety 101</option>
-                        <option value=2>Drawing Reading 101</option>
-                        <option value=3>Drawing Reading 102</option>
-                        <option value=4>Drawing Reading 103</option>
-                        <option value=5>Ethics Compliance</option>
-                        <option value=6>Cyber Security 101</option>
-                        <option value=7>Cyber Security 102</option>
-                        <option value=8>Torque Cert</option>
-                        <option value=9>Sealing Cert</option>
-                        <option value=10>Crane Cert</option>
-                    </select>
-                </label>
-            </div>
-            <label>Date Obtained: <input type="date" id="updateEmployeeCertDateObtained" name="dateObtained"></label>
-            <label>Expiration Date: <input type="date" id="updateEmployeeCertExpirationDate" name="expirationDate"></label>
-            <button type="submit">Update</button>
-            <button type="button" onClick="browseMain()">Cancel</button>
+          <legend>Update Employee Certification</legend>
+          <input type="hidden" id="updateEmployeeCertID" name="id" />
+          <div>
+            <label>Employee:
+              <select id="updateEmployeeCertEmployeeID">
+                <option value="1">Vladimir Collier</option>
+                <option value="2">Donna Lott</option>
+                <option value="3">Athena Fry</option>
+                <option value="4">Igor Parks</option>
+                <option value="5">Sybill Robles</option>
+                <option value="6">Lucian Jordan</option>
+                <option value="7">Sharon Murray</option>
+                <option value="8">Maisie Herman</option>
+              </select>
+            </label>
+          </div>
+          <div>
+            <label>Certification:
+              <select id="updateEmployeeCertCertID">
+                <option value="1">Safety 101</option>
+                <option value="2">Drawing Reading 101</option>
+                <option value="3">Drawing Reading 102</option>
+                <option value="4">Drawing Reading 103</option>
+                <option value="5">Ethics Compliance</option>
+                <option value="6">Cyber Security 101</option>
+                <option value="7">Cyber Security 102</option>
+                <option value="8">Torque Cert</option>
+                <option value="9">Sealing Cert</option>
+                <option value="10">Crane Cert</option>
+              </select>
+            </label>
+          </div>
+          <label>Date Obtained:
+            <input
+              type="date"
+              id="updateEmployeeCertDateObtained"
+              name="dateObtained"
+            /></label>
+          <label>Expiration Date:
+            <input
+              type="date"
+              id="updateEmployeeCertExpirationDate"
+              name="expirationDate"
+            /></label>
+          <button type="submit">Update</button>
+          <button type="button" onClick="browseMain()">Cancel</button>
         </form>
-    </div> 
+      </div>
 
-    <div id="delete" class="form-container">
+      <div id="delete" class="form-container">
         <form id="deleteEmployeeCertForm">
-            <legend>Delete Employee Certification</legend>
-            <p>Are you sure you want to delete this employee certification?</p>
-            <p>Employee ID: <input id="deleteEmployeeCertEmployeeID" disabled /></p>
-            <p>Certification ID: <input id="deleteEmployeeCertCertID" disabled /></p>
-            <button type="submit">Delete</button>
-            <button type="button" onClick="browseMain()">Cancel</button>
+          <legend>Delete Employee Certification</legend>
+          <p>Are you sure you want to delete this employee certification?</p>
+          <p>Employee ID:
+            <input id="deleteEmployeeCertEmployeeID" disabled /></p>
+          <p>Certification ID:
+            <input id="deleteEmployeeCertCertID" disabled /></p>
+          <button type="submit">Delete</button>
+          <button type="button" onClick="browseMain()">Cancel</button>
         </form>
-    </div>
-</main>
-<footer>
-    <p>© 2023 Company Name. All rights reserved.</p>
-</footer>
-</body>
+      </div>
+    </main>
+    <footer>
+      <p>© 2023 Company Name. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
