--- a/views/certifications.hbs
+++ b/views/certifications.hbs
@@ -1,6 +1,5 @@
-<!-- main.hbs-->
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Certified Construction</title>
@@ -12,15 +11,15 @@
     <header>
       <h1>Certifications</h1>
     </header>
-    <nav>
-      <a href="/">Home</a>
-      <a href="departments">Departments</a>
-      <a href="certifications">Certifications</a>
-      <a href="employees">Employees</a>
-      <a href="training_sessions">Training Sessions</a>
-      <a href="employees_cert">Employee Certifications</a>
-      <a href="employees_train">Employee Training Sessions</a>
-    </nav>
+    <nav class="navbar">
+    <a href="/">Home</a>
+    <a href="departments">Departments</a>
+    <a href="certifications">Certifications</a>
+    <a href="employees">Employees</a>
+    <a href="training_sessions">Training Sessions</a>
+    <a href="employees_cert">Employee Certifications</a>
+    <a href="employees_train">Employee Trainings</a>
+  </nav>
     <main>
       <!-- Display certifications in a table -->
       <div id="browse">
@@ -172,6 +171,8 @@
         </form>
       </div>
     </main>
-
+    <footer>
+    <p>© 2024 ByteBalancers. All rights reserved.</p>
+  </footer>
   </body>
 </html>
