--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,7 +12,7 @@
     <a href="employees">Employees</a>
     <a href="training_sessions">Training Sessions</a>
     <a href="employees_cert">Employee Certifications</a>
-    <a href="employees_train">Employee Trainings</a>
+    <a href="employees_train">Employee Training Sessions</a>
     </nav>
 <h2>Database Pages</h2>
 <nav>
