--- a/public/css/index.css
+++ b/public/css/index.css
@@ -90,6 +90,10 @@ video {
   vertical-align: baseline;
 }
 
+table {
+  margin-top: 20px;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -104,6 +108,7 @@ video {
   --primary-color: lightsteelblue;
   --secondary-color: aliceblue;
   --tertiary-color: whitesmoke;
+  --button-color: #58b0ff;
 }
 
 /* Typography */
@@ -163,7 +168,6 @@ h6 {
 }
 
 header h1 {
-  border-bottom: 1px solid;
 }
 
 a,
@@ -291,7 +295,9 @@ table {
   border-collapse: collapse;
   table-layout: fixed;
   text-align: left;
-  width: 100%;
+  width: 110%;
+  margin-left: -75px;
+  min-width: 900px;
 }
 table caption {
   margin: 2rem 0;
@@ -351,14 +357,12 @@ sup {
   display: inline;
 }
 
-.employeeTable {
-  margin-left: -100px;
-  width: 125%;
-  min-width: 1100px;
+.rowID {
+  width: 50px;
 }
 
-.employeeID {
-  width: 50px;
+.employeeCertID {
+  margin-left: -50px;
 }
 
 .employeeEmail {
@@ -397,6 +401,21 @@ textarea {
   font-family: inherit;
 }
 
+button {
+  padding: 9px 15px;
+  font-family: inherit;
+  border: .25px solid var(--primary-color);
+  border-radius: 3px;
+  background-color: var(--primary-color);
+}
+
+button:hover {
+  cursor: pointer;
+  scale: 1.05;
+  border: .25px solid var(--button-color);
+  background-color: var(--button-color);
+  border-radius: 3px;
+}
 
 .email {
   white-space: nowrap;  
@@ -425,6 +444,9 @@ header {
   padding: 1rem 0;
   text-align: center;
   width: 100%;
+  border-top-right-radius: 3px;
+  border-top-left-radius: 3px;
+  border-bottom: 1px solid;
 }
 
 header h1 {
@@ -450,6 +472,8 @@ header p {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
 
 .navbar a {
@@ -461,6 +485,7 @@ header p {
 
 .navbar a:hover {
   background-color: #575757;
+  border-radius: 3px;
 }
 
 /* Main Content Styles */
@@ -478,7 +503,7 @@ main h2 {
 }
 
 main a {
-  color: #0066cc;
+  color: blue;
   text-decoration: none;
 }
 
@@ -497,14 +522,16 @@ footer {
   color: #fff;
   text-align: center;
   padding: 1rem;
-  width: 100%;
+  width: 98vw;
   margin-top: auto;
+  border-top-right-radius: 3px;
+  border-top-left-radius: 3px;
 }
 
 
 
 /* Mobile Styling */
-@media screen and (max-width: 75ch) {
+@media screen and (max-width: 110ch) {
   body,
   input {
     font: var(--mobile-font-size) -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -513,6 +540,7 @@ footer {
   }
   table {
     table-layout: auto;
+    margin-left: 0;
   }
 }
 
