--- a/views/certifications.hbs
+++ b/views/certifications.hbs
@@ -3,8 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <title>Certified Construction</title>
-    <link rel="stylesheet" type="text/css" href="../css/index.css" />
-    <script src="../js/index.js"></script>
   </head>
   <body>
 
@@ -18,7 +16,7 @@
     <a href="employees">Employees</a>
     <a href="training_sessions">Training Sessions</a>
     <a href="employees_cert">Employee Certifications</a>
-    <a href="employees_train">Employee Trainings</a>
+    <a href="employees_train">Employee Training Sessions</a>
     </nav>
     <main>
       <!-- Display certifications in a table -->
@@ -28,7 +26,7 @@
           <thead>
             <tr>
               <th>Actions</th>
-              <th>Certification ID</th>
+              <th class="rowID">ID</th>
               <th>Name</th>
               <th>Certifying Organization</th>
               <th>Description</th>
@@ -56,7 +54,7 @@
                     data-description={{this.description}}
                   >Delete</a>
                 </td>
-                <td align="right">{{this.certID}}</td>
+                <td>{{this.certID}}</td>
                 <td>{{this.name}}</td>
                 <td>{{this.certOrg}}</td>
                 <td>{{this.description}}</td>
