--- a/views/departments.hbs
+++ b/views/departments.hbs
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../css/index.css" />
-    <script src="../js/index.js"></script>
     <title>Departments</title>
   </head>
   <body>
@@ -18,7 +16,7 @@
     <a href="employees">Employees</a>
     <a href="training_sessions">Training Sessions</a>
     <a href="employees_cert">Employee Certifications</a>
-    <a href="employees_train">Employee Trainings</a>
+    <a href="employees_train">Employee Training Session Sessions</a>
     </nav>
     <main>
       <div id="browse">
@@ -52,7 +50,7 @@
                     data-description={{this.description}}
                   >Delete</a>
                 </td>
-                <td>{{this.deptID}}</td>
+                <td class="rowID">{{this.deptID}}</td>
                 <td>{{this.name}}</td>
                 <td>{{this.description}}</td>
               </tr>
