--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -15,7 +15,7 @@
     <a href="employees">Employees</a>
     <a href="training_sessions">Training Sessions</a>
     <a href="employees_cert">Employee Certifications</a>
-    <a href="employees_train">Employee Trainings</a>
+    <a href="employees_train">Employee Training Sessions</a>
     </nav>
     <main>
       <div id="browse">
@@ -24,7 +24,7 @@
         <table class="employeeTable">
           <tr>
             <th>Action</th>
-            <th class="employeeID">ID</th>
+            <th class="rowID">ID</th>
             <th>First Name</th>
             <th>Last Name</th>
             <th class="employeeEmail">Email</th>
