--- a/views/employees_cert.hbs
+++ b/views/employees_cert.hbs
@@ -2,8 +2,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../css/index.css" />
-    <script src="../js/index.js"></script>
     <title>Employee Certifications</title>
   </head>
   <body>
@@ -17,7 +15,7 @@
     <a href="employees">Employees</a>
     <a href="training_sessions">Training Sessions</a>
     <a href="employees_cert">Employee Certifications</a>
-    <a href="employees_train">Employee Trainings</a>
+    <a href="employees_train">Employee Training Sessions</a>
     </nav>
     <main>
       <div id="browse">
@@ -27,9 +25,9 @@
           <thead>
             <tr>
               <th>Action</th>
-              <th>Employee Certification ID</th>
-              <th>Employee ID</th>
-              <th>Certification ID</th>
+              <th>ID</th>
+              <th>Employee</th>
+              <th>Certification</th>
               <th>Date Obtained</th>
               <th>Expiration Date</th>
             </tr>
