--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Employees</title>
-  <link rel="stylesheet" type="text/css" href="../css/index.css" />
-  <script src="../js/index.js"></script>
-</head>
 <body onload="browseEmployees()">
   <header>
     <h1>Employees</h1>
@@ -31,7 +22,7 @@
             <th class="rowID">ID</th>
             <th>First Name</th>
             <th>Last Name</th>
-            <th>Email</th>
+            <th class="employeeEmail">Email</th>
             <th>Department</th>
           </tr>
         </thead>
@@ -102,8 +93,5 @@
       </form>
     </div>
   </main>
-  <footer>
-    <p>© 2024 ByteBalancers. All rights reserved.</p>
-  </footer>
+
 </body>
-</html>
