--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,5 +1,5 @@
 <!-- main.hbs-->
-
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -16,4 +16,8 @@
     {{{body}}}
 
   </body>
+  <footer>
+    <p>© 2024 ByteBalancers. All rights reserved.</p>
+  </footer>
+
 </html>
