Update CSS style

--- a/views/certifications.hbs
+++ b/views/certifications.hbs
@@ -23,7 +23,7 @@
           <thead>
             <tr>
               <th>Actions</th>
-              <th class="rowID">ID</th>
+              <th class="hidden">ID</th>
               <th>Name</th>
               <th>Certifying Organization</th>
               <th>Description</th>
@@ -51,7 +51,7 @@
                     data-description={{this.description}}
                   >Delete</a>
                 </td>
-                <td>{{this.certID}}</td>
+                <td class="hidden" >{{this.certID}}</td>
                 <td>{{this.name}}</td>
                 <td>{{this.certOrg}}</td>
                 <td>{{this.description}}</td>
