--- a/views/departments.hbs
+++ b/views/departments.hbs
@@ -28,6 +28,7 @@
           <thead>
             <tr>
               <th>Action</th>
+              <th class="hidden">ID</th>
               <th>Name</th>
               <th>Description</th>
             </tr>
@@ -52,6 +53,7 @@
                     data-description={{this.description}}
                   >Delete</a>
                 </td>
+                <td class="hidden">{{this.deptID}}</td>
                 <td>{{this.name}}</td>
                 <td>{{this.description}}</td>
               </tr>
