--- a/views/employees.hbs
+++ b/views/employees.hbs
@@ -19,7 +19,7 @@
         <thead>
           <tr>
             <th>Action</th>
-            <th class="rowID">ID</th>
+            <th class="hidden">ID</th>
             <th>First Name</th>
             <th>Last Name</th>
             <th class="employeeEmail">Email</th>
@@ -40,7 +40,7 @@
                  data-id="{{this.employeeID}}"
                  data-name="{{this.fName}} {{this.lName}}">Delete</a>
             </td>
-            <td>{{this.employeeID}}</td>
+            <td class="hidden">{{this.employeeID}}</td>
             <td>{{this.fName}}</td>
             <td>{{this.lName}}</td>
             <td>{{this.email}}</td>
