--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,19 +1,21 @@
-
 <header>
-  <h1>Certified Construction: Database Management System</h1>
-  <p>This is the main portal to access and manage different aspects of our
-    company's operations. Below, you'll find links to various database pages
-    that provide specific functionalities.</p>
+  <h1>Certified Construction</h1>
+  <h2>Database Management System</h2>
 </header>
-    <nav class="navbar">
-    <a href="/">Home</a>
-    <a href="departments">Departments</a>
-    <a href="certifications">Certifications</a>
-    <a href="employees">Employees</a>
-    <a href="training_sessions">Training Sessions</a>
-    <a href="employees_cert">Employee Certifications</a>
-    <a href="employees_train">Employee Training Sessions</a>
-    </nav>
+<nav class="navbar">
+  <a href="/">Home</a>
+  <a href="departments">Departments</a>
+  <a href="certifications">Certifications</a>
+  <a href="employees">Employees</a>
+  <a href="training_sessions">Training Sessions</a>
+  <a href="employees_cert">Employee Certifications</a>
+  <a href="employees_train">Employee Training Sessions</a>
+</nav>
+<p style="text-align: center;">
+  This is the main portal to access and manage different aspects of our
+  company's operations. Below, you'll find links to various database pages
+  that provide specific functionalities.
+</p>
 <h2>Database Pages</h2>
 <nav>
   <p><a href="/departments">Departments</a> | 
