--- a/views/certifications.hbs
+++ b/views/certifications.hbs
@@ -55,7 +55,7 @@
               <td class="hidden">{{this.certID}}</td>
               <td>{{this.name}}</td>
               <td>{{this.certOrg}}</td>
-     ce       <td>{{this.description}}</td>
+              <td>{{this.description}}</td>
             </tr>
           {{/each}}
         </tbody>
