--- a/public/css/index.css
+++ b/public/css/index.css
@@ -431,6 +431,9 @@ main {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 main h2 {
