--- a/views/departments.hbs
+++ b/views/departments.hbs
@@ -28,7 +28,7 @@
         <thead>
           <tr>
             <th>Action</th>
-            <th>ID</th>
+            <th class="hidden">ID</th>
             <th>Name</th>
             <th>Description</th>
           </tr>
@@ -53,7 +53,7 @@
                   data-description="{{this.description}}"
                 >Delete</a>
               </td>
-              <td class="rowID">{{this.deptID}}</td>
+              <td class="hidden">{{this.deptID}}</td>
               <td>{{this.name}}</td>
               <td>{{this.description}}</td>
             </tr>
