--- a/views/employees_cert.hbs
+++ b/views/employees_cert.hbs
@@ -18,7 +18,7 @@
       <thead>
         <tr>
           <th>Action</th>
-          <th>ID</th>
+          <th class="hidden">ID</th>
           <th>Employee</th>
           <th>Certification</th>
           <th>Date Obtained</th>
@@ -51,7 +51,7 @@
             </td>
             <td>{{this.employeeCertID}}</td>
             <td>{{this.employeeID}}</td>
-            <td>{{this.certID}}</td>
+            <td class="hidden">{{this.certID}}</td>
             <td>{{this.dateObtained}}</td>
             <td>{{this.expirationDate}}</td>
           </tr>
@@ -59,7 +59,7 @@
       </tbody>
     </table>
   </div>
-  <div id="insert" class="form-container">
+  <div id="insert" class="form-container" style="display:none;">
     <form id="newEmployeeCertForm">
       <legend>Add New Employee Certification</legend>
       <div>
@@ -101,7 +101,7 @@
     </form>
   </div>
 
-  <div id="update" class="form-container">
+  <div id="update" class="form-container" style="display:none;">
     <form id="updateEmployeeCertForm">
       <legend>Update Employee Certification</legend>
       <input type="hidden" id="updateEmployeeCertID" name="id" />
@@ -152,7 +152,7 @@
     </form>
   </div>
 
-  <div id="delete" class="form-container">
+  <div id="delete" class="form-container" style="display:none;">
     <form id="deleteEmployeeCertForm">
       <legend>Delete Employee Certification</legend>
       <p>Are you sure you want to delete this employee certification?</p>
