Minor css updates

--- a/views/certifications.hbs
+++ b/views/certifications.hbs
@@ -62,7 +62,7 @@
       </table>
     </div>
 
-    <div id="insert" style="display: none;">
+    <div class="form-container" id="insert" style="display: none;">
       <form method="POST" action="/addCertification" id="addCertification">
         <legend><strong>Add New Certification</strong></legend>
         <fieldset>
